# ccswitch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  launch.bat  launch.sh  pyproject.toml
ccswitch/: __init__.py  __main__.py  actions.py  cli.py  creds.py  crypto.py  daemon.py  notify.py  oauth.py  runstate.py  selection.py  usage.py  vault.py
skill/ccswitch/: SKILL.md
tests/: conftest.py  helpers.py  test_actions_refresh.py  test_cli_dispatch.py  test_creds_vault.py  test_crypto_vault.py  test_daemon_loop.py  test_usage_selection_oauth.py
