[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccswitch"
version = "0.5.1"
description = "Manage and rotate multiple Claude accounts so you never stop working when one hits its usage limit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gino Santos" }]
keywords = ["claude", "claude-code", "anthropic", "cli", "rate-limit", "account-switcher", "rotation"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/GG-Santos/ccswitch"
Repository = "https://github.com/GG-Santos/ccswitch"
Issues = "https://github.com/GG-Santos/ccswitch/issues"

[project.scripts]
ccswitch = "ccswitch.cli:main"

[tool.setuptools]
packages = ["ccswitch"]
